# ipc-test

./: Cargo.toml
example/: Cargo.toml
example/src/: gui.html  lib.rs
gui/: Cargo.toml  bun.lockb  package.json
gui/src/: App.tsx  daemon.rs  lib.rs  main.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
src/: client.rs  editor.rs  editor_impl.rs  instance.rs  ipc.rs  lib.rs  thread.rs
src/gui/: daemon.rs  gui.rs  mod.rs  script.js
