[package]
name = "ipc-test"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
interprocess = "2.2.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
serde = "1.0.210"
serde_json = "1.0.128"
anyhow = "1.0.89"
gui = { path = "gui" }
# nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[workspace]
members = ["gui", "xtask"]
