[package]
name = "ipc-test"
version = "0.1.0"
edition = "2021"


[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" } #
# features = [ "assert_process_allocs",] }
baseview = { git = "https://github.com/RustAudio/baseview.git" }

interprocess = "2.2.1"
serde = "1.0.210"
serde_json = "1.0.128"
anyhow = "1.0.89"
gui = { path = "gui" }
x11rb = "0.13.1"
daemonize = "0.5.0"


[workspace]
members = ["example", "gui", "xtask"]
