[package]
name = "ipc-test"
version = "0.1.0"
edition = "2021"


[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" } #
# features = [ "assert_process_allocs",] }
baseview = { git = "https://github.com/RustAudio/baseview.git" }

interprocess = "2.2.1"
serde = "1.0.210"
serde_json = "1.0.128"
anyhow = "1.0.89"

x11rb = "0.13.1"
daemonize = "0.5.0"
keyboard-types = "0.6.2"
wry = "0.45.0"
tao = { version = "0.30.3", features = ["rwh_05"] }
tempdir = "0.3.7"
raw-window-handle = "0.5.0"


[workspace]
members = ["example", "xtask"]
