[package]
name = "example"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }

ipc-test = { path = "../" }
serde = "1.0.210"
serde_json = "1.0.128"
keyboard-types = "0.6.2"
tao = { version = "0.30.3", features = ["rwh_05"] }
